add Backgroud modes for ios devices

--- a/mobile/locstream_rn/app.json
+++ b/mobile/locstream_rn/app.json
@@ -12,7 +12,12 @@
       "supportsTablet": true,
       "bundleIdentifier": "sh.seki.locstream",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "UIBackgroundModes": [
+          "location",
+          "fetch",
+          "processing"
+        ]
       }
     },
     "android": {
