--- a/mobile/locstream_rn/package.json
+++ b/mobile/locstream_rn/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -39,7 +39,9 @@
     "react-native-webview": "13.13.5",
     "expo-task-manager": "~13.1.6",
     "expo-notifications": "~0.31.4",
-    "expo-location": "~18.1.6"
+    "expo-location": "~18.1.6",
+    "expo-sqlite": "~15.2.14",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
